Task 2.3: Insert demodata and Task 2.4: View product details page